--- a/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
@@ -1,5 +1,5 @@
 <div id="content">
-    {{add-exercises}}    
+    {{add-exercises Images=model.image}}    
     <br><br>
     <table class="ui single line table">
   
