--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-welcome.hbs
@@ -2,18 +2,12 @@
   <div class="ui container">
     <div class="introduction">
       <h1 class="ui inverted header">
-        <span class="library">Practitioner's Page</span>
+        <span class="library">Practitioner Page</span>
       </h1>
       <div class="ui hidden divider"></div>
       <div class="ui hidden divider"></div>
       <div class="ui center aligned grid">
-
-        <!--<a href="/appointment"  class="ui large inverted download button" >-->
-        <!--Book Appointment-->
-        <!--</a>-->
-
       </div>
-
     </div>
   </div>
 </div>
