Allowed Exercise Image to be Attached from general images

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -18,7 +18,7 @@
             <img class = "ui small image" src="{{Image.imageData}}">
             <br>
             <div class="ui toggle checkbox">
-                {{input type="checkbox" change=(action "addTempImage" Image) }}
+                {{input type="checkbox" checked=cbState change=(action "addTempImage" Image) }}
                 <label>Add</label>
             </div>
           </td>
