--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-forms.hbs
@@ -9,9 +9,9 @@
   </div>
 </div>
 
-<div style="padding: 10em">
+<div style="padding-left: 2em;padding-right: 15em;padding-top: 10em;">
 
-  <div class="ui vertical pointing menu">
+  <div class="ui vertical pointing menu" style="width: 12rem;">
     <a class="{{formState}} item" {{action "form"}}>
       Forms
     </a>
@@ -22,7 +22,7 @@
 
   <br><br>
   {{#if formView}}
-  <div class="ui very padded container segment" style="margin-top: -10em;margin-right: 100px !important;z-index:  2;position: relative;">
+  <div class="ui very padded container segment" style="margin-top: -18em;z-index:  2;position: relative;margin-left: 200px !important;">
 
     <h2> Forms </h2>
 
