--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
@@ -16,8 +16,7 @@
     {{ui-rating
       class="heart"
       maxRating=10
-      rating=rateValue
-      onRate=(action "ratingSave")
+      onRate=(action "ratingSave" rateValue=value)
     }}
   {{/if}}
 
