--- a/SelfStart/SelfStartFrontEnd/app/templates/practitioner/new-rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/practitioner/new-rehabplans.hbs
@@ -1,1 +1,11 @@
+<div class="masthead segment bg2">
+  <div class="ui container">
+    <div class="introduction">
+      <h1 class="ui inverted header">
+        <span class="library" style="font-size: 1.25em">Add Plan</span>
+      </h1>
+    </div>
+  </div>
+</div>
+
 {{add-rehabplan}}
