--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -30,9 +30,9 @@
 
           <div class="right menu inverted">
             <a class="item"><div id="SkypeButton_Call"></div></a>
-            <a href="/client/Upload Photos" class="item">Upload Photos</a>
-            <a  href="/client/Exercise Menu"class="item">Exercise Menu</a>
-            <a href="/client/Resources" class="item">Resources</a>
+            <a href="../images" class="item">Upload Photos</a>
+            <a  href="/client/exercise-menu"class="item">Exercise Menu</a>
+            <a href="/client/resources" class="item">Resources</a>
             <a href="/client/appointment" class="item">Book Appointment</a>
             <a id="login" href="../" class="item">Log out</a>
           </div>
