--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
@@ -3,7 +3,7 @@
     <div class="introduction">
       <h1 class="ui inverted header">
         <span class="library">Client Page</span>
-        <span class="library">{{model.message}}</span>
+        <span class="library">{{message}}</span>
       </h1>
       <div class="ui hidden divider"></div>
       <div class="ui hidden divider"></div>
