--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-questions.hbs
@@ -1,5 +1,5 @@
 
-<div class="ui very padded container segment" id="top" style="margin-right: 100px !important;z-index:  2;position: relative;">
+<div class="ui very padded container segment" id="top" style="margin-top: 18em;z-index:  2;position: relative;margin-left: 200px !important;">
   {{add-question}}
   <div class="ui grid" style="margin-top: -30px;">
     <div class="left thirteen wide column" style="margin-top: -5px;">
