--- a/SelfStart/SelfStartFrontEnd/app/templates/practitioner/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/practitioner/rehabplans.hbs
@@ -12,80 +12,83 @@
   </div>
 </div>
 
-<div class="background">
+<div id="content">
+  <div class="ui search" style="margin-left: 70%">
+    <br><br>
+    <input class="prompt" type="text" placeholder="Search Rehabilitation plan">
+    <i class="search icon"></i>
 
-  <div id="content">
+  </div>
 
-    <section id="cd-section">
-      <section id="cd-table">
-        <div class="cd-table-container">
-          <ul>
-            <li style="text-align: center; font-size: 1.2rem; text-transform: uppercase;
+
+  <section id="cd-section">
+    <section id="cd-table">
+      <div class="cd-table-container">
+        <ul>
+          <li style="text-align: center; font-size: 1.2rem; text-transform: uppercase;
                           font-weight: bold; color: white; background-color: #f58b4c;">Rehabilitation Plan</li>
 
-            {{#each model.rehabPlan as |Rehabplan|}}
+          {{#each model.rehabPlan as |Rehabplan|}}
 
-              <li>
-                {{Rehabplan.planName}}
-                <p style="float: right;  padding-top: .5%;">{{delete-rehabplan ID=Rehabplan.id}}</p>
-                <p style="float: right; padding-right: 2%;  padding-top: .5%;">{{edit-rehabplan ID=Rehabplan.id}}</p>
-                <p style="float: right; padding-right: 30%; ">{{Rehabplan.description}} </p>
-              </li>
-              {{list-forms ID=Rehabplan.id plan=Rehabplan}}
+            <li>
+              {{Rehabplan.planName}}
+              <p style="float: right;  padding-top: .5%;">{{delete-rehabplan ID=Rehabplan.id}}</p>
+              <p style="float: right; padding-right: 2%;  padding-top: .5%;">{{edit-rehabplan ID=Rehabplan.id}}</p>
+              <p style="float: right; padding-right: 30%; ">{{Rehabplan.description}} </p>
+            </li>
+            {{list-forms ID=Rehabplan.id plan=Rehabplan}}
 
-            {{/each}}
+          {{/each}}
 
-          </ul>
-        </div>
-
-      </section> <!-- cd-table -->
-    </section>
-
-    {{#each model.assessmentTest as |assessmentTest|}}
-      <div id="assessmentTest">
-        {{#link-to 'practitioner.assessment-display'(query-params id=assessmentTest.id)}}
-          <button class="ui button">View Assessment Test</button>
-        {{/link-to}}
+        </ul>
       </div>
-    {{/each}}
+
+    </section> <!-- cd-table -->
+  </section>
+
+  {{#each model.assessmentTest as |assessmentTest|}}
+    <div id="assessmentTest">
+      {{#link-to 'practitioner.assessment-display'(query-params id=assessmentTest.id)}}
+        <button class="ui button">View Assessment Test</button>
+      {{/link-to}}
+    </div>
+  {{/each}}
 
 
 
-    {{!--
-      <!--<table class="ui single line table">-->
-        <!--<thead>-->
-        <!--<tr>-->
-          <!--<th>Name</th>-->
-          <!--<th>Description</th>-->
-          <!--<th></th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-          <!--{{#each model as |Rehabplan|}}-->
-            <!--<tr>-->
-              <!--<td>{{Rehabplan.planName}}</td>-->
-              <!--<td>{{Rehabplan.description}}</td>-->
-              <!--<td>-->
-                <!--<div class="four wide column right aligned">-->
-                  <!--{{edit-rehabplan ID=Rehabplan.id}}-->
-                <!--</div>-->
-                <!--<div class="four wide column left aligned">-->
-                  <!--{{delete-rehabplan ID=Rehabplan.id}}-->
-                <!--</div>-->
-              <!--</td>-->
-            <!--</tr>-->
-          <!--{{/each}}-->
-        <!--</tbody>-->
-      <!--</table>-->
-    --}}
-  </div>
+  {{!--
+    <!--<table class="ui single line table">-->
+      <!--<thead>-->
+      <!--<tr>-->
+        <!--<th>Name</th>-->
+        <!--<th>Description</th>-->
+        <!--<th></th>-->
+      <!--</tr>-->
+      <!--</thead>-->
+      <!--<tbody>-->
+        <!--{{#each model as |Rehabplan|}}-->
+          <!--<tr>-->
+            <!--<td>{{Rehabplan.planName}}</td>-->
+            <!--<td>{{Rehabplan.description}}</td>-->
+            <!--<td>-->
+              <!--<div class="four wide column right aligned">-->
+                <!--{{edit-rehabplan ID=Rehabplan.id}}-->
+              <!--</div>-->
+              <!--<div class="four wide column left aligned">-->
+                <!--{{delete-rehabplan ID=Rehabplan.id}}-->
+              <!--</div>-->
+            <!--</td>-->
+          <!--</tr>-->
+        <!--{{/each}}-->
+      <!--</tbody>-->
+    <!--</table>-->
+  --}}
+</div>
 
-  <div id="add" class="container">
-    {{#link-to 'practitioner.new-rehabplans'}}
-      <a id="add" class="round-button">
-        <i class="plus icon"></i>
-      </a>
-    {{/link-to}}
-  </div>
-  <br><br><br><br>
+<div id="add" class="container">
+  {{#link-to 'practitioner.new-rehabplans'}}
+    <a id="add" class="round-button">
+      <i class="plus icon"></i>
+    </a>
+  {{/link-to}}
 </div>
