embedding appointment to register

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
@@ -211,6 +211,10 @@
           {{#if appointment}}
             <p>Appointment Calender Goes Here!!</p>
             <div class="field">
+
+              {{book-appointment}}
+
+
               <div class="ui centered grid">
                 <button class="ui blue button" style="height: 50px;" {{action "backToIntro"}}>Back</button>
                 <button class="ui blue button" style="height: 50px;" {{action "goToPayment"}}>Next</button>
