--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
@@ -105,7 +105,7 @@
                   {{input class="user" type="text" value = givenName placeholder="First Name" required = true}}
                 </div>
                 <div class="column " style="margin: 1em 0;">
-                  {{input class="user" type="text" value = givenName placeholder="Last Name" required = true}}
+                  {{input class="user" type="text" value = familyName placeholder="Last Name" required = true}}
                 </div>
             </div>
 
