modified layout of forms page

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-form.hbs
@@ -20,7 +20,8 @@
 </div>
 
 {{else}}
-    <button class="ui button" {{action 'addForm'}}>
-        Add Form
-    </button>
+<br>
+ <button class="fluid ui blue button" style="max-width: 20%; height: 50px;" {{action 'addForm'}}>
+    Add Form
+</button>
 {{/if}}
