--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
@@ -1,6 +1,6 @@
 
-<button class="ui button" {{action 'openModal'}}>
-Manage Form Questions
+<button class="ui mini circular labeled icon green button" {{action 'openModal'}}>
+Add Questions
 </button>
 
 {{#ui-modal name= modalName class= modalName}}
