--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -3,6 +3,7 @@
     {{yield}}
   {{else}}
     <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}} TEST</h1>
+    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
   {{/if}}
 
   {{#unless isInteracting}}
