--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
@@ -1,62 +1,185 @@
-<p style="cursor: pointer; " title="Edit"  {{action 'openModal' }}>
-  <img src="/assets/images/pencil.svg">
-</p>
+<div class="masthead segment bg2">
+  <div class="ui container">
+    <div class="introduction">
+      <h1 class="ui inverted header">
+        <span class="library" style="font-size: 1.25em">Menu Builder</span>
+      </h1>
+
+    </div>
+  </div>
+</div>
 
 
-{{#ui-modal name=modalName class=modalName }}
-  <i class="close icon"></i>
-  <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
+<div class="background" style="height:95vh">
+
+  <div class="ui container">
+
+    <div class="ui segment" id="top" style="float:left;max-width: 300px !important;margin: 100px 0 0 0;">
+      <p style="margin-top: 10px;color:  white;font-size: 1.5em;font-weight: bolder; text-align: center">
+        Exercises
+      </p>
+
+      <br><br><br>
 
 
-  <div class="header">Edit Plan</div>
-  <div class="scrolling content" >
+      <div class="ui form">
+        <div class="field">
+          <div class="ui icon input">
+            <i class="search icon"></i>
+            {{input type="text" placeholder="Search..."  value=query }}
+          </div>
+        </div>
+      </div>
 
-  <form id="edit" class="cd-form floating-labels" {{action "submit" on="submit"}}>
+      <br><br>
 
-    <div class="ui hidden divider"></div>
+      <div style="display: inline">
+        <table class="ui fixed table" style="border: none;border-color: white;">
+          <tbody >
+          <tr style="font-weight: bold;">
+            {{#each exerciseAttributes as |column|}}
+              <th style="padding-left: 1em" class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
+                {{#if (eq column.dir 'asc')}}
+                  <i class="sort ascending icon"></i>
+                {{/if}}
+                {{#if (eq column.dir 'desc')}}
+                  <i class="sort descending icon"></i>
+                {{/if}}
+                {{#if (eq column.dir '')}}
+                  <i class="sort icon"></i>
+                {{/if}}
+              </th>
+              <th class="left aligned four wide column"></th>
+            {{/each}}
+          </tr>
+          </tbody>
+        </table>
+      </div>
 
-    <div class="field " style="margin: 1em 0;">
-      <label class="cd-label">Rehabilitation Name</label>
-      {{input class="star" type="text" value = plansData.planName required = true}}
+      <div class="ui divider"></div>
+
+      <div  id="exerciseWin" style="height:500px; overflow-y: scroll; overflow-x: hidden;">
+        <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+          <tbody >
+          {{#each sortedNames as |exercise|}}
+
+            <tr>
+              {{#each exerciseAttributes as |column|}}
+                <td class={{column.class}}>
+                  {{get exercise column.key}}
+                </td>
+                <td class="left aligned four wide column">
+                  {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+                </td>
+              {{/each}}
+            </tr>
+          {{/each}}
+          </tbody>
+        </table>
+      </div>
     </div>
 
 
 
-    <div class="field" style="margin: 1em 0;">
-      <label class="cd-label">Description</label>
-      {{input class="message" type="cd-textarea" value = plansData.description required = true}}
-    </div>
+    <button class="ui green button" style="position:absolute;margin:300px 20px 20px 20px;;float:left;min-width: 100px;" {{action "add"}}>
+      Add
+    </button>
 
-    <div class="ui two column grid">
-      <div class="column " style="margin: 1em 0;">
-        <label class="cd-label">Goal</label>
-        {{input  class="award" type="text" value = plansData.goal required = true}}
+    <button class="ui red button" style="margin:400px 20px 20px 20px;float:left;min-width: 100px;" {{action "remove"}}>
+      Remove
+    </button>
+
+
+
+
+
+    <div class="ui segment" id="top" style="height:734px;float:left;margin-top: 100px; max-width: 680px !important;">
+
+      <div class="ui grid" style="margin-top: 2px;">
+        <div class="left eleven wide column" style="margin-top: -5px;">
+          <p style="margin-top: 10px;color:  white;font-size: 1.5em;font-weight: bolder;">
+            Menu
+          </p>
+        </div>
+
       </div>
 
 
-    <div class="column " style="margin: 1em 0;">
-      <h4>Exercises</h4>
-      <p class="cd-select icon">
-        <select class="people" onchange={{action 'selectExercise' value="target.value"}}>
-          {{#each exerciseModel as |oneExercise|}}
-            <option value={{oneExercise.name}} selected={{eq plansData.exercises oneExercise.name}}>
-              {{oneExercise.name}}
-            </option>
-          {{/each}}
-        </select>
-      </p>
+      <br><br><br>
+
+      <link integrity="" rel="stylesheet" href="/assets/css/form-style.css"> <!-- Resource style -->
+      <form id="edit" class="cd-form floating-labels" {{action "submit" on="submit"}}>
+
+        <div class="field" style="margin: 1em 0;">
+          {{input class="bookmark" type="text" value = model.planName placeholder="Name" required = true}}
+        </div>
+        <div class="field" style="margin: 1em 0;">
+          {{input class="message" type="text" value = model.description placeholder="Description" required = true}}
+        </div>
+
+        <div class="field" style="margin-left: 495px;margin-top: -212px;position:  absolute;">
+          <button class="ui button" value="submit">
+            save
+          </button>
+        </div>
+      </form>
+
+
+      <br>
+
+      <div style="display: inline">
+        <table class="ui fixed table" style="border: none;border-color: white;">
+          <tbody >
+          <tr style="font-weight: bold;">
+            {{#each menuAttributes as |column|}}
+
+              {{#if (eq column.key 'sets' )}}
+                <th style="padding-left: 1em" class={{column.class}}>{{column.name}}</th>
+
+              {{else}}
+                <th class={{column.class}}>
+                  {{column.name}}
+                </th>
+              {{/if}}
+            {{/each}}
+            <th class="left aligned two wide column"></th>
+            <th class="left aligned two wide column"></th>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="ui divider"></div>
+
+      <div  id="listWin" style="height:428px; overflow-y: scroll; overflow-x: hidden;">
+        <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+
+
+          {{#sortable-group tagName="tbody" onChange="reorderItems" as |group|}}
+            {{#each listModel as |list|}}
+
+              {{#sortable-item tagName="tr" model=list group=group spacing=15 handle=".handle"}}
+
+                {{#each menuAttributes as |column|}}
+                  <td class={{column.class}}>
+                    {{get list column.key}}
+                  </td>
+                {{/each}}
+                <td class="left aligned two wide column">
+                  {{ui-checkbox checked=(get list 'selectedList') onChange=(action (mut (get list 'selectedList')))}}
+                </td>
+                <td class="left aligned two wide column">
+                  <span class="handle" style="cursor: pointer">&varr;</span>
+                </td>
+
+              {{/sortable-item}}
+            {{/each}}
+
+          {{/sortable-group}}
+
+        </table>
+      </div>
     </div>
-    </div>
 
-    <div class="field">
-      <button class="fluid ui blue button" value="submit" style="max-width: 100%; height: 50px;">
-        Submit
-      </button>
-    </div>
-
-  </form>
-
-
+  </div>
 </div>
-
-{{/ui-modal}}
