--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -1,6 +1,6 @@
 {{#if isEditing}}
 
-{{#ui-modal name=modalName class=modalName}}
+{{!-- {{#ui-modal name=modalName class=modalName}}
     
     <div class="scrolling content">
         <div class ="ui center alligned five column grid">
@@ -25,15 +25,6 @@
                     </div>
                 </div>
                 </div>
-                {{!-- <div class ="column" style="max-height:160px; min-height:160px;">
-                    <div class="ui toggle checkbox">
-                        {{input type="checkbox" checked=cbState change=(action "addTempImage" Image) }}
-                        <label style="max-width:50px;">{{Image.name}}</label>
-                    </div>
-                    <br><br>
-                    <img style="max-height:105px;" class = "ui small image" src="{{Image.imageData}}">
-                </div>
-                <br><br><br> --}}
             {{/each}}
         </div>
     </div>
@@ -47,10 +38,8 @@
             </div>
         </div>
     </div>
-
-
     <br><br>
-{{/ui-modal}}
+{{/ui-modal}} --}}
 
 <div class="ui fluid raised very padded text container segment">
    <h2 id="exercise" class="ui fluid centered header">Add New Exercise</h2>
@@ -212,12 +201,51 @@
                     <input type="file" value="target.value" onchange={{action "selectFile"}} style="{{inputStyle}}"
                         accept="{{accept}}" multiple={{multiple}}>
                 </div>
-            <br>
-                <button class="ui button" {{action 'openModal'}}>Assign Images from Existing Images</button>
             <br><br><br><br>
+                {{!-- <button class="ui button" {{action 'openModal'}}>Assign Images from Existing Images</button> --}}
+                 
+                 {{!-- <div class="ui block header">{{input type="text" placeholder="Search..." }}</div> --}}
+               
+                
+                <div class ="ui center alligned three column grid" style="border:0.5px solid black;overflow-y:scroll;max-height:300px;">
+                    {{#each Images as |Image|}}
+                        <div class ="column">
+                <div class="ui fluid card" style="max-height:221px;min-height:221px;">
+                    <div class="content">
+                         <div class ="sidebar-box" style="max-height:50px;min-height:50px;">
+                            <p class ="sidebar-box">{{Image.name}}</p>
+                        </div>
+                    </div>
+                    <div class = "content" style="min-height:105px;">
+                        <div class="image">
+                            <img style="max-height:105px;" class = "ui small image" src="{{Image.imageData}}">
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <div class="ui toggle checkbox">
+                            {{input type="checkbox" checked=cbState change=(action "addTempImage" Image) }}
+                            <label>Add</label>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            {{/each}}
+        </div>
+
+    
+    {{!-- <div class="actions">
+        <div class="ui positive button">Save</div>
+        <div class="ui black deny button">Cancel</div> --}}
+        {{!-- <div class="ui form" >
+            <div class="fields" >
+                <div class="ui fluid search">{{input type="text" placeholder="Search..." }}</div>
+            </div>
+        </div> --}}
+    {{!-- </div> --}}
 
 </div>
         <div class = "inline">
+            <br><br><br>
             <button class="ui button" type="submit" {{action "submit"}}>Submit</button>
             <button class="ui button" type="submit" {{action "cancel"}}>Cancel</button>
         </div>
